# sonic-forge-dsp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
cmake/: get_cpm.cmake  sonicforge.pc.in
examples/: sine_example.cpp  wav_writer_example.cpp
include/sonicforge/: delayline.hpp  oscillator.hpp  smoothed_value.hpp  state_variable_filter.hpp  waveshaper.hpp
scripts/: install-hooks.sh  serve-web.py
scripts/git-hooks/: pre-commit
scripts/pre-commit/: check-format.sh  check-tidy.sh  run-tests.sh
src/: delayline.cpp  oscillator.cpp  state_variable_filter.cpp
tests/: new_modules_test.cpp  oscillator_test.cpp
web/: CMakeLists.txt  README.md
web/public/: index.html  main.js  sonicforge-processor.js
web/src/: sonicforge_worklet.cpp
